2007-08-16  Michael Smith <msmith@fluendo.com>

	* flumotion/component/feedcomponent010.py:
	  Don't track inactive pad monitors separately; it's bug-prone and
	  makes subclassing this stuff harder than it needs to be.

2007-08-16  Michael Smith <msmith@fluendo.com>

	* flumotion/component/feedcomponent010.py:
	  Don't call methods that no longer exist.
	  Fixes #741.

2007-08-16  Michael Smith <msmith@fluendo.com>

	* flumotion/component/producers/playlist/playlist.py:
	  identity doesn't seem to handle new segments very well when syncing.
	  So, use two identities: one early in the pipeline with
	  single-segment=true, and one late in the pipeline doing
	  synchronisation.

2007-08-14  Arek Korbik  <arkadini@gmail.com>

	* flumotion/test/comptest.py (ComponentTestHelper.run_flow):
	Unbox DeferredList result properly.

2007-08-14  Michael Smith <msmith@fluendo.com>

	* flumotion/component/feedcomponent010.py:
	  Some fixes for EaterPadMonitor code; don't call None or cancel
	  already-called deferred calls.

2007-08-13  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/feedcomponent010.py
	  (FeedComponent.bus_message_received_cb):
	Check if the identity is actually the identity from an eater
	not just if it starts with 'eater'.

2007-08-10  Michael Smith <msmith@fluendo.com>

	* flumotion/component/feedcomponent010.py:
	  Refactor eater probes to use PadMonitor code.
	  Refactor PadMonitor to allow an EaterPadMonitor subclass to handle
	  the eater-specific things properly.
	  Some cleanups of unused code and variables.

2007-08-10  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/feedcomponent010.py
	  (FeedComponent.bus_message_received_cb):
	Only handle imperfect timestamps and offsets if they are
	actually from identity elements in the eaters.

2007-08-10  Arek Korbik  <arkadini@gmail.com>

	* flumotion/admin/admin.py (AdminModel.connection_error):
	Make the errback accept the deffered arg that it uses!
